fixed list value overflow, added cause option

--- a/src/public/css/list.less
+++ b/src/public/css/list.less
@@ -33,6 +33,10 @@
 			float: left;
 			margin-right: 10px;
 			overflow: hidden;
+
+			text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 		}
 
 		span.list-item-xtra-small {
